<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="LocalSocket" Id="{e6289e19-22d8-43ae-91b6-e22fdbda8ee4}">
    <Declaration><![CDATA[//{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT
	PrgName : STRING := 'AREA_2';
	AmsNetId : T_AmsNetId := '2.0.131.216.1.1';
	AmsPort : T_AmsPort := 851;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>